改用su -c单条命令读取+详细错误诊断
用su -c cat直接读取每个路径，合并stderr输出。
每个路径的读取结果（exit code、输出、异常）都写入诊断日志。
诊断日志同时在初始加载和3秒重扫后写入Download文件夹。